--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.github.jdsjlzx:LRecyclerView:1.3.4'
     compile 'com.android.support:design:24.1.1'
+    compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
 }
