--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.shoppingCar.ShoppingCarActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 </manifest>
