--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,5 +51,8 @@
         <activity
             android:name=".activity.shoppingCar.ShoppingCarActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.MessageActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 </manifest>
