--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,10 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -70,6 +72,9 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.videoedit.LocalVideoFilesActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".activity.videoedit.EditVideoActivity"
             android:screenOrientation="portrait"></activity>
     </application>
 </manifest>
