--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:name=".activity.vendingRack.VendUploadGoodsActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".activity.vendingRack.MyOrderActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"></activity>
+
         <!--相册Activity-->
         <activity
             android:name=".util.PhotoAlbumUtil.MultiImageSelectorActivity"
