--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,7 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.videoedit.EditVideoActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.shoppingCar.ShoppingCarActivity"
             android:screenOrientation="portrait"></activity>
