--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,10 +80,9 @@
             android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.videoedit.LocalMusicActivity"
-            android:name=".activity.videoedit.EditVideoActivity"
             android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".activity.shoppingCar.ShoppingCarActivity"
-            android:screenOrientation="portrait"></activity>
+        <!--<activity-->
+        <!--android:name=".activity.shoppingCar.ShoppingCarActivity"-->
+        <!--android:screenOrientation="portrait"></activity>-->
     </application>
 </manifest>
