--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.yanzhenjie:recyclerview-swipe:1.0.4'
     compile files('libs/isoparser-1.1.22.jar')
-    compile 'com.github.CarGuo:RecordWave:v1.1.3'
+//    compile 'com.github.CarGuo:RecordWave:v1.1.3'
 }
