--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -78,8 +78,9 @@
         <activity
             android:name=".activity.videoedit.LocalVideoFilesActivity"
             android:screenOrientation="portrait"></activity>
+        <activity android:name=".activity.videoedit.LocalMusicActivity"></activity>
         <activity
-            android:name=".activity.videoedit.LocalMusicActivity"
+            android:name=".activity.videoedit.EditVideoActivity"
             android:screenOrientation="portrait"></activity>
         <!--<activity-->
         <!--android:name=".activity.shoppingCar.ShoppingCarActivity"-->
