--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,10 +79,13 @@
             android:name=".activity.videoedit.LocalVideoFilesActivity"
             android:screenOrientation="portrait"></activity>
         <activity
-            android:name=".activity.videoedit.LocalMusicActivity"
+            android:name=".activity.videoedit.EditVideoActivity"
             android:screenOrientation="portrait"></activity>
         <!--<activity-->
         <!--android:name=".activity.shoppingCar.ShoppingCarActivity"-->
         <!--android:screenOrientation="portrait"></activity>-->
+        <activity
+            android:name=".activity.videoedit.LocalMusicActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 </manifest>
