--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".activity.vendingRack.MyOrderActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".activity.vendingRack.LogisticsActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"></activity>
 
         <!--相册Activity-->
         <activity
@@ -78,14 +82,12 @@
         <activity
             android:name=".activity.videoedit.LocalVideoFilesActivity"
             android:screenOrientation="portrait"></activity>
-        <activity
-            android:name=".activity.videoedit.EditVideoActivity"
-            android:screenOrientation="portrait"></activity>
         <!--<activity-->
         <!--android:name=".activity.shoppingCar.ShoppingCarActivity"-->
         <!--android:screenOrientation="portrait"></activity>-->
         <activity
             android:name=".activity.videoedit.LocalMusicActivity"
             android:screenOrientation="portrait"></activity>
+
     </application>
 </manifest>
