--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -92,6 +92,8 @@
         <activity
             android:name=".activity.videoedit.LocalMusicActivity"
             android:screenOrientation="portrait"></activity>
-
+        <activity
+            android:name=".activity.videoedit.ShareVideoActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 </manifest>
