--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-//    useLibrary 'org.apache.http.legacy'
+    useLibrary 'org.apache.http.legacy'
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
     defaultConfig {
@@ -41,4 +41,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/isoparser-1.1.22.jar')
     compile 'com.github.CarGuo:RecordWave:v1.1.3'
+    compile files('libs/xUtils-2.6.14.jar')
 }
