--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,12 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activity.HomePagerActivity"
+            android:name=".activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme">
@@ -37,6 +37,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activity.HomePagerActivity"
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".activity.vendingRack.VendingRackHomeActivity"
             android:screenOrientation="portrait"></activity>
@@ -110,8 +113,9 @@
         <activity
             android:name=".activity.production.mine.MyProductionActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".activity.GoodsDetailActivity"
-            android:screenOrientation="portrait"/>
+        <!--<activity-->
+        <!--android:name=".activity.GoodsDetailActivity"-->
+        <!--android:screenOrientation="portrait" />-->
 
     </application>
 </manifest>
