--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,17 +42,21 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/isoparser-1.1.22.jar')
     compile 'com.github.CarGuo:RecordWave:v1.1.3'
-//    //RxJava
+    //    //RxJava
     compile 'io.reactivex:rxandroid:1.2.0'
     compile 'io.reactivex:rxjava:1.1.5'
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'     //返回gson
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    //返回gson
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    compile 'com.squareup.retrofit2:converter-scalars:2.0.0'    //返回String
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'    //logo生成器
+    compile 'com.squareup.retrofit2:converter-scalars:2.0.0'
+    //返回String
+    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    //logo生成器
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile files('libs/xUtils-2.6.14.jar')
+    compile files('libs/AMap_Location_V3.3.0_20170118.jar')
 }
