--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,5 @@ dependencies {
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/AMap_Location_V3.3.0_20170118.jar')
+    compile files('libs/httpmime-4.1.3.jar')
 }
