--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,25 @@ android {
         versionName "1.0"
         multiDexEnabled true
     }
+    signingConfigs {
+        release {
+            keyAlias 'gmkey'
+            keyPassword 'gm10086'
+            storeFile file('../appSignFile.jks')
+            storePassword 'gm10086'
+        }
+    }
 
+    buildTypes {
+        release {
+            minifyEnabled false
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.release
+        }
+    }
     sourceSets {
         main {
             //jni库的调用会到资源文件夹下libs里面找so文件
