--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
         }
     }
 
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -74,6 +78,7 @@ dependencies {
     //logo生成器
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'me.dm7.barcodescanner:zxing:1.7.2'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/AMap_Location_V3.3.0_20170118.jar')
