注册，购物车

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -153,11 +153,8 @@
         <activity
             android:name=".activity.goodsDetail.WriteOrderActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name=".activity.ChooseAddressActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".activity.goodsDetail.WriteOrderActivity"
-            android:screenOrientation="portrait"/>
+
+
         <activity android:name=".activity.goodsDetail.ChooseAddressActivity"
             android:screenOrientation="portrait"/>
 
@@ -199,9 +196,10 @@
         <activity
             android:name=".activity.PersonalSetActivity"
             android:screenOrientation="portrait">
-
         </activity>
 
+        <activity android:name=".activity.ResetPswActivity"
+            android:screenOrientation="portrait"/>
         <!--友盟appkey-->
         <meta-data
             android:name="UMENG_APPKEY"
