--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,4 +86,5 @@ dependencies {
     compile files('libs/xUtils-2.6.14.jar')
     compile files('libs/AMap_Location_V3.3.0_20170118.jar')
     compile files('libs/httpmime-4.1.3.jar')
+    compile files('libs/AMap_Search_V4.0.0_20170111.jar')
 }
