--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-
-        // NOTE: Do not place your application dependencies here; they belong
+        classpath 'com.android.tools.build:gradle:2.2.3'
+//        classpath 'com.android.tools.build:gradle:2.1.0'
+//        classpath 'com.android.tools.build:gradle:2.14.1'
         // in the individual module build.gradle files
     }
 }
@@ -15,6 +15,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+//        flatDir {
+//            dirs '../Framework/libs'
+//        }
         maven { url "https://jitpack.io" }
     }
 }
