--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,34 +5,35 @@ android {
     aaptOptions.cruncherEnabled = false
     compileSdkVersion 24
 //    buildToolsVersion '25.0.3'
-//    buildToolsVersion '25.0.2'
-    buildToolsVersion = '27.0.3'
+    buildToolsVersion '25.0.2'
+//    buildToolsVersion = '27.0.3'
     aaptOptions.useNewCruncher = false
     defaultConfig {
         applicationId "com.atgc.cotton"
         minSdkVersion 16
         targetSdkVersion 24
         versionCode 4
-        versionName "2.3.0"
+        versionName "3.0.0"
         multiDexEnabled true
+//        , 'armeabi-v7a', 'armeabi-v8a', 'x86'
         ndk {
             //abiFilters "armeabi"
             //设置支持的SO库架构
-            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a', 'x86'
+            abiFilters 'armeabi'
             moduleName "app"
         }
-        //添加如下配置就OK了
-        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
+//        //添加如下配置就OK了
+//        javaCompileOptions { annotationProcessorOptions { includeCompileClasspath = true } }
     }
 
-    splits {
-        abi {
-            enable true
-            reset()
-            include 'x86', 'armeabi-v7a', 'x86_64'
-            universalApk true
-        }
-    }
+//    splits {
+//        abi {
+//            enable true
+//            reset()
+//            include 'x86', 'armeabi-v7a', 'x86_64'
+//            universalApk true
+//        }
+//    }
 
     signingConfigs {
         release {
@@ -44,7 +45,7 @@ android {
     }
 
     dexOptions {
-        javaMaxHeapSize "5g"
+        javaMaxHeapSize "4g"
     }
 
     buildTypes {
@@ -79,25 +80,26 @@ android {
             shrinkResources false
             signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            applicationVariants.all { variant ->
-//                variant.outputs.each { output ->
-//                    if (output.outputFile != null && output.outputFile.name.endsWith('.apk')
-//                            && 'release'.equals(variant.buildType.name)) {
-//                        def apkFile = new File(
-//                                output.outputFile.getParent(),
-//                                "66Boss_v${variant.versionName}.apk")
-//                        output.outputFile = apkFile
-//                    }
-//                }
-//            }
             applicationVariants.all { variant ->
-                variant.outputs.all { output ->
-//                    def fileName = "66Boss${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
-                    // 输出apk名称为great_v1.0_wandoujia.apk
-                    def fileName = "66Boss${defaultConfig.versionName}.apk"
-                    outputFileName = fileName
+                variant.outputs.each { output ->
+                    if (output.outputFile != null && output.outputFile.name.endsWith('.apk')
+                            && 'release'.equals(variant.buildType.name)) {
+                        def apkFile = new File(
+                                output.outputFile.getParent(),
+                                "66Boss_v${variant.versionName}.apk")
+                        output.outputFile = apkFile
+                    }
                 }
             }
+
+//            applicationVariants.all { variant ->
+//                variant.outputs.all { output ->
+////                    def fileName = "66Boss${defaultConfig.versionName}_${variant.productFlavors[0].name}.apk"
+//                    // 输出apk名称为great_v1.0_wandoujia.apk
+//                    def fileName = "66Boss${defaultConfig.versionName}.apk"
+//                    outputFileName = fileName
+//                }
+//            }
         }
     }
 
@@ -139,9 +141,9 @@ dependencies {
     //logo生成器
     compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
     compile 'com.google.code.gson:gson:2.4'
-//    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
+//    compile 'com.jakewharton:butterknife:8.4.0'
+//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'me.dm7.barcodescanner:zxing:1.7.2'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
     compile files('libs/xUtils-2.6.14.jar')
@@ -152,4 +154,5 @@ dependencies {
     compile files('libs/autobahn.jar')
     compile 'org.java-websocket:Java-WebSocket:1.3.0'
     compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
 }
